syntax = "proto3";
package chat;

message Message {
  string mensaje = 1;
}

service ChatService {
  rpc RecibirDeAdmin(Message) returns (Message) {}
  rpc RecibirDeCliente(Message) returns (Message) {}
}